Activity SubjectPage erstellt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="frenchTitle">Französisch</string>
     <string name="chemistryTitle">Chemie</string>
     <string name="grade">Keine Noten</string>
+
+    <string name="subjectPageTitle">Noten </string>
 </resources>
